# nostr-dvm-agent

./: .gitignore  Building Nostr DVM AI Agents.txt  LICENSE  Nostr AI Agent Marketplace Deep Dive.txt  README.md  Strike API Technical Audit Report.txt
backend/: .env.example  Dockerfile  pyproject.toml
backend/scripts/: deploy-backend.sh  generate_keys.py  setup-gce.sh  test_job_request.py
backend/src/nostr_dvm_agent/: __init__.py  config.py  main.py
backend/src/nostr_dvm_agent/advertising/: nip89.py
backend/src/nostr_dvm_agent/ai/: gemini_client.py
backend/src/nostr_dvm_agent/core/: event_handler.py  nostr_client.py  state_machine.py
backend/src/nostr_dvm_agent/db/: store.py
backend/src/nostr_dvm_agent/payment/: lightning.py  zap_verifier.py
backend/src/nostr_dvm_agent/security/: encryption.py
backend/src/nostr_dvm_agent/services/: base.py  discovery.py  image_generation.py  summarization.py  text_extraction.py  text_generation.py  translation.py
backend/tests/: test_services.py  test_state_machine.py  test_zap_verifier.py
frontend/: .env.example  .firebaserc  firebase.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  Header.tsx  PaymentModal.tsx  ResultCard.tsx  SearchBar.tsx  ServicePicker.tsx  StatusIndicator.tsx
frontend/src/hooks/: useNostrJob.ts
frontend/src/lib/: keys.ts  nostr.ts  types.ts
